# minion

./: .cursorrules  .env.template  Dockerfile  README.md  pyproject.toml
.github/workflows/: deploy.yml  docker-build.yml
src/minion/: app.py
src/minion/security/: decorators.py
